WIP: Lilac: Update resource generation. && Lilac: Make usage of HlaGene more generic.